--- a/internal/renderer/templates/partials.html
+++ b/internal/renderer/templates/partials.html
@@ -85,4 +85,5 @@ function toggleTheme() {
     }
 }
 </script>
+<script data-goatcounter="https://rainyinsaigon.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 {{end}}
