--- a/internal/renderer/templates/blog_post.html
+++ b/internal/renderer/templates/blog_post.html
@@ -11,6 +11,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="{{.Title}}">
     <meta name="twitter:description" content="{{.Description}}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/atom-one-dark.min.css">
 </head>
 <body class="font-sans text-gray-900 bg-white dark:bg-gray-950 dark:text-gray-100">
     {{template "nav-inner" .}}
@@ -112,5 +113,7 @@
     </script>
 
     {{template "footer" .}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
 </body>
 </html>{{end}}
